<resources>
    <string name="app_name">CoviPedidos</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_msg">¡Bienvenid@! Inicie sesión para continuar</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="register_msg">Si no tenés cuenta, podes registrarte aquí:</string>
    <string name="registrarse">Registrarse</string>
    <string name="tienda_imagen_descripcion">Imagen de la tienda</string>
    <string name="tiendas_label">Tiendas</string>
    <string name="direccion_label">Dirección</string>
    <string name="productos_label">Productos</string>
    <string name="total_a_pagar_label">Total a Pagar:</string>
    <string name="informaci_n_de_tu_pedido_label">Información de tu pedido:</string>
    <string name="realizar_pedido_label">¡Realizar Pedido!</string>
    <string name="imagen_del_producto_description">Imagen del producto</string>
    <string name="filtrar_rubro">Filtrar Rubro:</string>
    <string name="filtrar_nombre">Filtrar Nombre:</string>
    <string name="filtrar_ubicacion">Filtrar ubicación más cercana</string>
    <string name="android_sdk_places_apt_key">AIzaSyDL8Sb0TsKkJ_ArCtQFUX1IL7z_ZdiFdUo</string>
    <string name="productos_title_label">Productos</string>
    <string name="filtrar">Filtrar:</string>
    <string name="agregar_al_carrito">Agregar al Carrito</string>
    <string name="ir_al_carrito">Ir al Carrito</string>
    <string name="descripcion_img_foto">Imagen del producto</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="covi_pedidos">Covi-Pedidos</string>
    <string name="nueva_cuenta">Nueva Cuenta</string>
    <string name="nom_bre">Nom bre</string>
    <string name="email">Email</string>
    <string name="email_icon_description">email_icon_description</string>
    <string name="clave_description">clave_description</string>
    <string name="icono_direccion_description">Icono direccion</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="olvido_la_contrase_a">Olvido la contraseña?</string>
    <string name="aun_no_esta_registrado">Aun no esta registrado?</string>
    <string name="resetear_clave">Resetear clave</string>
    <string name="olvide_mi_clave">Olvide mi clave</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="inicio">Inicio</string>
    <string name="historial">Historial</string>
    <string name="tiendas">Tiendas</string>
    <string name="pedidos">Pedidos</string>
    <string name="mis_direcciones">Mis Direcciones</string>
    <string name="buscar_una_tienda">Buscar una Tienda</string>
    <string name="filler_line">filler_line</string>
    <string name="buscar_una_categoria">Buscar una categoría</string>
    <string name="busqueda">busqueda</string>
    <string name="rubro_dos_puntos">Rubro:</string>
    <string name="solo_cercanas">Sólo cercanas</string>
    <string name="buscar_un_producto">Buscar un producto</string>
    <string name="no_product_count">0</string>
    <string name="hacer_pedido">Hacer Pedido</string>
    <string name="ver_carrito">Ver Carrito</string>
    <string name="vaciar_carrito">Vaciar Carrito</string>
    <string name="zero">0</string>
    <string name="sin_stock">Sin stock</string>
    <string name="tu_carrito">Tu Carrito</string>
    <string name="cantidad">Cantidad</string>
    <string name="precio_view">Precio $%1$s</string>
    <string name="paga_tu_pedido">Paga tu pedido</string>
    <string name="tarjeta">Tarjeta</string>
    <string name="vencimiento">Vencimiento</string>
    <string name="cvv">CVV</string>
    <string name="nombre_y_apellido">Nombre y Apellido</string>
    <string name="dni">DNI</string>
    <string name="finaliza_tu_pedido">Finaliza tu Pedido</string>
    <string name="elegir_otra_direccion">Elegir otra Direccion</string>
    <string name="cambiar">Cambiar</string>
    <string name="efectivo">Efectivo</string>
    <string name="dejale_propina_al_repartidor">¡Dejale propina al repartidor!</string>
    <string name="sugerencia_10_porciento">Sugerencia (10%):</string>
    <string name="propina">Propina:</string>
    <string name="resumen_de_tu_pedido">Resumen de tu pedido</string>
    <string name="total_de_productos">Total de productos:</string>
    <string name="total">Total:</string>
    <string name="comisi_n_covi_pedidos">Comisión Covi-Pedidos:</string>
    <string name="propina_label">Propina:</string>
    <string name="envio_label">Envío:</string>
    <string name="_150">$150</string>
    <string name="_200">$200</string>
    <string name="empty_string" />
    <string name="a_donde_lo_enviamos">¿A donde lo enviamos?</string>
    <string name="c_mo_lo_vas_a_pagar">¿Cómo lo vas a pagar?</string>
    <string name="signo_pesos">$</string>
    <string name="icono_ubicacion_descripcion">Icono ubicacion</string>
    <string name="tus_direcciones">Tus Direcciones</string>
    <string name="nueva_direccion">Nueva dirección</string>
    <string name="guardar">Guardar</string>
    <string name="a_donde_te_enviamos_el_pedido">¿A donde te enviamos el pedido?</string>
    <string name="elegi_la_direccion_de_entrega">Elegí la Dirección de Entrega</string>
    <string name="aceptar">Aceptar</string>
    <string name="elegi_la_forma_de_pago">Elegí la Forma de Pago</string>
    <string name="signo_pregunta_cierre">\?</string>
    <string name="con_cuanto_pagas_los">¿Con cuanto pagas los $</string>
    <string name="cuota_s_de">cuota/s de $</string>
    <string name="cft">(CFT:</string>
    <string name="parentesis_cerrando">)</string>
    <string name="abiertas">Abiertas</string>
    <string name="exceso_calorias">Exceso calorias</string>
    <string name="exceso_sodio">Exceso sodio</string>
    <string name="exceso_grasas_saturadas">Exceso grasas saturadas</string>
    <string name="exceso_grasas_totales">Exceso grasas totales</string>
    <string name="exceso_azucares">Exceso azucares</string>
    <string name="channel_name">Notificaciones</string>
    <string name="channel_description">Canal para notificaciones</string>
</resources>