<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="unpsjb.ing.tnt.clientes.ui.home.HomeFragment"
        android:label="@string/inicio" />
    <fragment
        android:id="@+id/nav_addresses"
        android:name="unpsjb.ing.tnt.clientes.ui.direcciones.DireccionesFragment"
        android:label="@string/mis_direcciones"
        tools:layout="@layout/fragment_direcciones" />
    <fragment
        android:id="@+id/nav_stores"
        android:name="unpsjb.ing.tnt.clientes.ui.tiendas.ListadoTiendasFragment"
        android:label="@string/tiendas"
        tools:layout="@layout/fragment_listado_tiendas" >
        <action
            android:id="@+id/action_nav_stores_to_nav_products"
            app:destination="@id/nav_products" />
    </fragment>
    <fragment
        android:id="@+id/nav_orders"
        android:name="unpsjb.ing.tnt.clientes.ui.pedidos.PedidosFragment"
        android:label="@string/pedidos"
        tools:layout="@layout/fragment_pedidos" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="unpsjb.ing.tnt.clientes.ui.auth.CerrarSesionFragment"
        android:label="fragment_cerrar_sesion"
        tools:layout="@layout/fragment_cerrar_sesion" />
    <fragment
        android:id="@+id/nav_products"
        android:name="unpsjb.ing.tnt.clientes.ui.productos.ListadoProductosFragment"
        android:label="@string/productos_label" >
        <action
            android:id="@+id/action_nav_products_to_nav_cart"
            app:destination="@id/nav_cart" />
    </fragment>
    <fragment
        android:id="@+id/nav_cart"
        android:name="unpsjb.ing.tnt.clientes.ui.pedidos.CarritoFragment"
        android:label="Carrito" />

</navigation>